# ChangeLog for dev-perl/Test-SubCalls
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-SubCalls/ChangeLog,v 1.14 2008/08/24 07:53:40 tove Exp $

*Test-SubCalls-1.08 (24 Aug 2008)

  24 Aug 2008; Torsten Veller <tove@gentoo.org> +Test-SubCalls-1.08.ebuild:
  Version bump

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org> Test-SubCalls-1.07.ebuild:
  sparc/x86 stable

*Test-SubCalls-1.07 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Test-SubCalls-1.07.ebuild:
  Version bump

  20 Feb 2008; nixnut <nixnut@gentoo.org> Test-SubCalls-1.06.ebuild:
  Added ~ppc wrt bug 207343

  27 Dec 2007; Andrej Kacian <ticho@gentoo.org> Test-SubCalls-1.06.ebuild:
  Stable on x86.

  15 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -Test-SubCalls-0.03.ebuild, -Test-SubCalls-0.05.ebuild,
  Test-SubCalls-1.06.ebuild:
  Marking amd64, sparc stable; cleaning up stale ebuilds

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Test-SubCalls-0.05.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Test-SubCalls-0.03.ebuild, Test-SubCalls-0.05.ebuild,
  Test-SubCalls-1.06.ebuild:
  Adding perl dep; fixed DEPEND

  05 Jul 2006; Christian Hartmann <ian@gentoo.org>
  Test-SubCalls-0.03.ebuild, Test-SubCalls-0.05.ebuild,
  Test-SubCalls-1.06.ebuild:
  Fixed RDEPEND wrt bug #134781

*Test-SubCalls-1.06 (23 Jun 2006)

  23 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  +Test-SubCalls-1.06.ebuild:
  Version bump upstream

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Test-SubCalls-0.03.ebuild, Test-SubCalls-0.05.ebuild:
  Marking sparc stable

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Test-SubCalls-0.05.ebuild:
  Keywording ~amd64

*Test-SubCalls-0.05 (26 Apr 2006)

  26 Apr 2006; <mcumming@gentoo.org> +Test-SubCalls-0.05.ebuild:
  Version bump

*Test-SubCalls-0.03 (20 Apr 2006)

  20 Apr 2006; <mcummings@gentoo.org> +metadata.xml,