@@ -1,8 +1,10 @@
 DIST Test-SubCalls-1.06.tar.gz 21052 RMD160 4cc30ce3f8e10a1d84c931cb4029d4a69395fb0a SHA1 3aaf707dffc472001799804a185300263c37ba0f SHA256 0ca1a05616fc03b1783a30add2bd9c13e063be68f24b60a7e35c88760beb45b2
 DIST Test-SubCalls-1.07.tar.gz 22006 RMD160 c9793ac77cc9a138ff04fdd9f60f44120a9cb50b SHA1 a3f7bb0509ec14e3e2cc762323d7fbcb9f5bee24 SHA256 d5dabb9677d0fdeb5bb7a5a4663280fc0023bc1b3f1115f526d66bd633a7dddc
 DIST Test-SubCalls-1.08.tar.gz 23382 RMD160 0106e73ac959d0147f9a8aad9bb7be7cd01c1146 SHA1 c7b948cc1934000d5cf7ffe0171393e12686606e SHA256 b2a68ccd4bb834206ae7c39f90ab704c4c794e87ebe4463aa97fef11d1d8d50e
+DIST Test-SubCalls-1.09.tar.gz 25727 RMD160 f3df43ad4b7cd2117d277367af7b4dcf248615d4 SHA1 a661586dd732fbf6aa5803ff8f64d727a5d35704 SHA256 a334b0457da338d79be2dbb62d403701fc90f7607df840115ff45ee1e2bd6e70
 EBUILD Test-SubCalls-1.06.ebuild 586 RMD160 eaefc94f2ae38f50d64daf4be71a5698d981fc32 SHA1 df19b8974c55be56ee75f0aead9869062ff744e5 SHA256 f9cd33614f77ae596917f95a7507eeb6a94dce08295341907e28869fe09ba70c
 EBUILD Test-SubCalls-1.07.ebuild 625 RMD160 6e024a73cc7cb785165a8338f4b477901b39d4a0 SHA1 ccd187b56498abcfbd9f7336f750a061264068cd SHA256 26ff4a67ac49e4f3dafa09c833b5ccb3cac89f9c76df2a2777df20780769ba97
 EBUILD Test-SubCalls-1.08.ebuild 530 RMD160 81d385a57202e73e746ec729c3c50fd029aba846 SHA1 4c6b717ec2ae582a038a08ba8b02534dc681c643 SHA256 d658af4ccb38a69c51b8aeaa136fbe3262c81828f82c7e9f5e07f0bf96d55fce
-MISC ChangeLog 2047 RMD160 d0af2714d3400d3c8540b1a7be22675a0cb93c86 SHA1 2bb0714da2500129cbf84c767aed62b0dfa2b2da SHA256 9623decf4af992e7ce38129357baf791ad3030c718fa4bf19edefcac0f3b7dd3
+EBUILD Test-SubCalls-1.09.ebuild 511 RMD160 cc2675b040b1f3624cae4254e12cff48405074c6 SHA1 a9f12339c272fe0590317ccd6b1740550a91752c SHA256 8322ba8488e00a846764e794bd1ef4a0d9097c253a853a8b4a1b51f568b96c04
+MISC ChangeLog 2174 RMD160 8cec949c40b3f14a494a0598f09ca84e1d9e53fa SHA1 9fc3db72370f39bbd41304ce38fc33ebfc97f022 SHA256 e7ddcdb53ca277314daee62169ebf22f0ecbe2c62e1b39f8fb42a58361e1d94c
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
