@@ -1,0 +1,20 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-SubCalls/Test-SubCalls-1.09.ebuild,v 1.1 2009/04/21 16:29:00 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=ADAMK
+inherit perl-module
+
+DESCRIPTION="Track the number of times subs are called"
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-macos ~sparc-solaris"
+IUSE=""
+
+DEPEND=">=dev-perl/Hook-LexWrap-0.20
+	virtual/perl-File-Spec"
+RDEPEND="${DEPEND}"
+
+SRC_TEST="do"
